<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="21sp"
        android:text="@string/hello_world"
        />

    <TextView
        android:id="@+id/Connected"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="21sp"
        android:text="@string/IP_Address"
        />
    <TextView
        android:id="@+id/Ip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="21sp"
        android:text="@string/SSID"
        />
    <TextView
        android:id="@+id/Ssid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="21sp"
        android:text="@string/BSSID"
        />
    <TextView
        android:id="@+id/Bssid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="21sp"
        android:text="@string/Speed"
        />
    <TextView
        android:id="@+id/Speed"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="21sp"
        android:text="@string/Rssi"
        />

    <TextView
        android:id="@+id/Rssi"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="21sp"
        android:text="@string/MAC"
        />
    <TextView
        android:id="@+id/Mac"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:id="@+id/Scan"
        android:src="@drawable/discover"
        android:text="@string/Scan"
        android:textSize="21sp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal" />


</LinearLayout>
